--- a/package.json
+++ b/package.json
@@ -48,30 +48,36 @@
     "userscript"
   ],
   "devDependencies": {
+    "@babel/core": "7.26.10",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
     "@eslint/markdown": "^6.3.0",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "16.0.1",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-jsdoc": "^50.6.9",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
     "prettier": "3.2.5",
+    "rollup": "4.39.0",
+    "rollup-plugin-banner2": "1.3.1",
+    "rollup-plugin-dev": "2.0.5",
+    "rollup-plugin-ejs": "4.0.1",
+    "rollup-plugin-re": "1.0.7",
+    "rollup-plugin-scss-string": "github:machsix/rollup-plugin-scss-string",
     "typescript": "5.8.3",
     "vitepress": "^1.2.2",
     "vue": "^3.4.27"
   },
   "dependencies": {
-    "@babel/core": "7.24.6",
     "@babel/plugin-syntax-import-attributes": "7.24.6",
     "@babel/plugin-transform-runtime": "7.24.6",
     "@babel/preset-env": "7.24.6",
     "@babel/runtime-corejs3": "^7.24.6",
-    "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "25.0.8",
-    "@rollup/plugin-json": "6.1.0",
-    "@rollup/plugin-node-resolve": "15.2.3",
     "@types/greasemonkey": "4.0.7",
     "@types/lodash": "4.17.4",
     "babel-plugin-lodash": "3.3.4",
@@ -80,18 +86,11 @@
     "cross-env": "7.0.3",
     "displacejs": "github:machsix/displace#v1.4.0",
     "extract-zip": "2.0.1",
-    "got": "14.3.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.5",
     "lodash": "4.17.21",
     "loglevel": "1.9.1",
     "puppeteer": "2.1.0",
-    "rollup": "4.18.0",
-    "rollup-plugin-banner2": "1.3.0",
-    "rollup-plugin-dev": "2.0.4",
-    "rollup-plugin-ejs": "4.0.0",
-    "rollup-plugin-re": "1.0.7",
-    "rollup-plugin-scss-string": "github:machsix/rollup-plugin-scss-string",
     "yargs": "17.7.2"
   },
   "pnpm": {
