--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -12,7 +12,7 @@ env:
   PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: "true"
   COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
 jobs:
-  ci:
+  update_script:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
